# qd_shentry2024

./: README.md
src/navi_multi_goals_pub_rviz_plugin/file/: mutigoalfile.csv  mutigoalfile1.csv
src/navi_multi_goals_pub_rviz_plugin/src/: multi_navi_goal_panel.cpp  multi_navi_goal_panel.h
src/qidian_tactics/: CMakeLists.txt  package.xml
src/qidian_tactics/RMUL2024_world/: RMUL2024_world.world
src/qidian_tactics/cfg/: dr_driver.cfg
src/qidian_tactics/config/: amcl.rviz  slam.rviz
src/qidian_tactics/gazebo_world/: 000.world  LMS_000.world  rm.world  se  sendpakage_new.world  sendpakagerobo_world.world
src/qidian_tactics/launch/: RM_gazebo.launch  slam.launch  start_amcl.launch  tactics.launch
src/qidian_tactics/launch/file/: amcl.launch  depthimage_to_laserscan.launch  gmapping.launch  map_saver.launch  nav_amcl_path.launch  nav_path.launch  reader_map.launch
src/qidian_tactics/map/: nav.pgm  nav.yaml
src/qidian_tactics/msg/: driver.msg
src/qidian_tactics/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params2.yaml  teb_local_planner.yaml
src/qidian_tactics/src/: tactics.cpp  tactics_debug.cpp
src/qidian_tactics/xacro/: robot.xacro  waking_robot.xacro
src/qidian_tactics/xacro/file/: base_link.xacro  base_link1.xacro  base_link2.xacro  camera_laser.xacro  main.xacro
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_bringup/config/params/: mpc_planner_params.yaml  teb_local_planner_params.yaml
src/rm_bringup/launch/: mapping.launch  nav.launch  nav_simulation.launch  qd_driver.launch
src/rm_bringup/map/: map.pgm  map.yaml
src/rm_bringup/map/RMUC2024_world/: RMUC2024_world.yaml
src/rm_bringup/map/RMUL2024_world/: RMUL2024_world.yaml
src/rm_decision/: CMakeLists.txt  package.xml
src/rm_decision/scripts/: teleop_keyborad.py
src/rm_decision/src/: rm_decision.cpp
src/rm_driver/livox_ros_driver2/: CMakeLists.txt
src/rm_driver/livox_ros_driver2/config/: MID360_config.json
src/rm_driver/qd_driver/: CMakeLists.txt  package.xml
src/rm_driver/qd_driver/scripts/: odom_ekf.py
src/rm_driver/qd_driver/src/: livox_repub.cpp  qd_driver.cpp
src/rm_local_planner/: README.md
src/rm_local_planner/local_planner/include/: local_planner.h
src/rm_local_planner/mpc_planner/include/: mpc_planner.h
src/rm_local_planner/mpc_planner/src/: mpc_planner.cpp
src/rm_local_planner/rm_local_planner/: CMakeLists.txt  package.xml  rm_local_planner_plugin.xml
src/rm_local_planner/rm_local_planner/config/rviz/: rm_local_planner.rviz
src/rm_local_planner/rm_local_planner/include/: control_base.h  obstacle_tracker_kf.h  utility.h
src/rm_local_planner/rm_local_planner/include/LQR_controller/: LQR_controller.h
src/rm_local_planner/rm_local_planner/include/cubic_spline/: cubic_spline.h  cubic_spline_ros.h
src/rm_local_planner/rm_local_planner/include/mpc_controller_acado/: mpc_controller_acado.h
src/rm_local_planner/rm_local_planner/include/mpc_controller_casadi/: mpc_controller_casadi.h
src/rm_local_planner/rm_local_planner/include/mpc_controller_cppad/: mpc_controller_cppad.h
src/rm_local_planner/rm_local_planner/include/mpc_controller_osqp/: mpc.h  mpc_controller_osqp.h
src/rm_local_planner/rm_local_planner/launch/: amcl_simple_meca_car.launch  control_base.launch  jackal_gazebo.launch  rm_local_planner.launch  slam_gmapping.launch
src/rm_local_planner/rm_local_planner/src/: control_base.cpp  cubic_spline_planner.cpp  obstacle_tracker_kf.cpp
src/rm_local_planner/rm_local_planner/src/LQR_controller/: LQR_controller.cpp
src/rm_local_planner/rm_local_planner/src/mpc_controller_acado/: mpc_controller_acado.cpp  mpc_controller_acado_gen.cpp
src/rm_local_planner/rm_local_planner/src/mpc_controller_casadi/: mpc_controller_casadi.cpp
src/rm_local_planner/rm_local_planner/src/mpc_controller_cppad/: mpc_controller_cppad.cpp
src/rm_local_planner/rm_local_planner/src/mpc_controller_osqp/: mpc.cpp  mpc_controller_osqp.cpp  mpc_node.cpp
src/rm_localization/FAST_LIO/Log/: fast_lio_time_log.csv  mat_out.txt  mat_pre.txt  pos_log.txt
src/rm_localization/FAST_LIO/config/: mid360.yaml  mid360_down.yaml
src/rm_localization/FAST_LIO/launch/: Pointcloud2Map.launch  mapping_mid360.launch
src/rm_localization/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/rm_localization/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp
src/rm_localization/Point-LIO-master/config/: avia.yaml
src/rm_localization/direct_lidar_inertial_odometry/cfg/: params.yaml
src/rm_localization/direct_lidar_inertial_odometry/launch/: dlio.launch  dlio.rviz
src/rm_localization/hdl_global_localization/src/: hdl_global_localization_node.cpp
src/rm_localization/hdl_localization/: CMakeLists.txt
src/rm_localization/hdl_localization/apps/: globalmap_server_nodelet.cpp
src/rm_localization/hdl_localization/launch/: hdl_localization.launch
src/rm_percetion/linefit_ground_segmentation_ros/launch/: segmentation.launch
src/rm_percetion/pcd2pgm/launch/: run.launch
src/rm_percetion/pointcloud_to_laserscan/launch/: sample_node.launch
src/rm_simulation/dynamic_obstacles_in_gazebo-master/: CMakeLists.txt  animated_box_1.cc  animated_box_2.cc  animated_box_3.cc  animated_box_4.cc  animated_box_5.cc  animated_box_6.cc  animated_box_7.cc  animated_box_8.cc  animated_box_9.cc  hello_world.cc  model_push.cc  model_push.world  turtlebot3_cafe.world
src/rm_simulation/sentry/: CMakeLists.txt  package.xml
src/rm_simulation/sentry/launch/: display.launch  gazebo.launch
src/rm_simulation/sentry/meshes/: Link2.STL  camera_Link1.STL  camera_Link2.STL  odom1.STL  odom2.STL  pitch1.STL  pitch2.STL  yaw1.STL  yaw2.STL
src/rm_simulation/sentry/urdf/: sentry.csv  sentry.urdf
src/rm_simulation/simple_meca_car/: README.md
src/rm_simulation/simple_meca_car/launch/: amcl.launch  gazebo.launch  (+3 more)
src/roborts_msgs/: CMakeLists.txt  package.xml
src/roborts_msgs/launch/: roborts_msgs_test_data.launch
src/roborts_msgs/msg/: RobotStatus.msg  driver.msg
src/roborts_msgs/src/: roborts_msgs_test_data.cpp
(+7 files in other folders)
