<package format = "2">
    <name>roborts_msgs</name>
    <version>2.0.0</version>
    <description>The roborts_msgs package</description>
    <author>rm_qd_driver</author>
    <maintainer email="lzp@todo.todo">lzp</maintainer>
    <license>GPL 3.0</license>
    <url type="repository">https://github.com/RoboMaster/RoboRTS-Base</url>
    <url type="bugtracker">https://github.com/RoboMaster/RoboRTS-Base/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>  <!--自定义消息依赖-->

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>  <!--自定义消息依赖-->
  <exec_depend>message_runtime</exec_depend>  <!--自定义消息依赖-->

    <export>
    </export>

</package>
